--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <div id="container">
   <svg></svg>
 </div>
-<a href="https://github.com/zjonsson/attractions"><img style="position: absolute; top: 0; right: 0; border: 0;opacity:0.6" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+<a href="https://github.com/zjonsson/electro"><img style="position: absolute; top: 0; right: 0; border: 0;opacity:0.6" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 <script src="app.js"></script>
   
